--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>나의 게임 개발 스토리!</h1>
     <ul><li><h3>게임 소개</h3></li></ul>
         <strong><a href = "file:///C:/Users/enter/OneDrive/%EB%B0%94%ED%83%95%20%ED%99%94%EB%A9%B4/WEB1/BlueGreenDayWEB.html" target="_blank" title = "Open Script Dater">BlueGreenDay.RPG Script </a></strog>
-        <br><strong><a href = "file:///C:/Users/enter/OneDrive/%EB%B0%94%ED%83%95%20%ED%99%94%EB%A9%B4/WEB1/ChaosWar.html" target="_blank" title = "Open Script Dater">ChaosWar.Def Script </a></strog>
+        <br><strong><a href = "file:///C:/Users/enter/OneDrive/%EB%B0%94%ED%83%95%20%ED%99%94%EB%A9%B4/WEB1/ChaosWarHTML.html" target="_blank" title = "Open Script Dater">ChaosWar.Def Script </a></strog>
       <ul><li><h3>게임 목록</h3></li></ul>
 
     <p><img src="Wolf_NightImage.jpg" width="100%">
