--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>나의 게임 개발 스토리!</h1>
     <ul><li><h3>게임 소개</h3></li></ul>
-        <strong><a href = "https://github.com/ssinYoung/MyWEB/blob/main/BlueGreenDayWEB.html" title = "Open Script Dater">BlueGreenDay.RPG Script </a></strog>
+        <strong><a href = "https://github.com/ssinYoung/MyWEB/blob/main/BlueGreenDayWEB.html" target = "_blank" title = "Open Script Dater">BlueGreenDay.RPG Script </a></strog>
         <br><strong><a href = "https://github.com/ssinYoung/MyWEB/blob/main/ChaosWarWEB.html" target="_blank" title = "Open Script Dater">ChaosWar.Def Script </a></strog>
       <ul><li><h3>게임 목록</h3></li></ul>
 
