--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <ul><li><h3>게임 소개</h3></li></ul>
         <strong><a href = "https://github.com/ssinYoung/MyWEB/blob/main/BlueGreenDayWEB.html" target = "_blank" title = "Open Script Dater">BlueGreenDay.RPG Script </a></strog>
         <br><strong><a href = "https://github.com/ssinYoung/MyWEB/blob/main/ChaosWarWEB.html" target="_blank" title = "Open Script Dater">ChaosWar.Def Script </a></strog>
-      <ul><li><h3>게임 목록</h3></li></ul>
-
+                <br><p><input type="button" value="어둡게" onclick="document.querySelector('body').style.backgroundColor = 'black';
+               document.querySelector('body').style.color = 'white';">
+               <input type="button" value="밝게" onclick="document.querySelector('body').style.backgroundColor = 'white';
+                      document.querySelector('body').style.color = 'black';"></p> 
+    <ul><li><h3>게임 목록</h3></li></ul>
     <p><img src="Wolf_NightImage.jpg" width="100%">
     <br></p>
 </body>
