--- a/index.html
+++ b/index.html
@@ -4,18 +4,38 @@
     <title>Y3 MyGameList - html</title>
     <meta charset="utf-8">
 </head>
-<body>
+<body style = "background-color:black; color:white">
     <h1>나의 게임 개발 스토리!</h1>
     <ul><li><h3>게임 소개</h3></li></ul>
         <strong><a href = "https://github.com/ssinYoung/MyWEB/blob/main/BlueGreenDayWEB.html" title = "Open Script Dater">BlueGreenDay.RPG Script </a></strog>
         <br><strong><a href = "https://github.com/ssinYoung/MyWEB/blob/main/ChaosWarWEB.html" title = "Open Script Dater">ChaosWar.Def Script </a></strog>
-        <br><p><input type="button" value="어둡게" onclick="document.querySelector('body').style.backgroundColor = 'black';
-               document.querySelector('body').style.color = 'white';">
-               <input type="button" value="밝게" onclick="document.querySelector('body').style.backgroundColor = 'white';
-                      document.querySelector('body').style.color = 'black';"></p>
+        <br><p><input type="button" value="밝은 배경" onclick=" var target = document.querySelector('body');
+        if (this.value == '어두운 배경'){
+          target.style.backgroundColor = 'black';
+          target.style.color = 'white';
+          this.value = '밝은 배경';
+
+          var alist = document.querySelectorAll('a');
+          var i = 0;
+          while(i < alist.length){
+          alist[i].style.color = 'powderblue';
+          i = i + 1;
+          }
+
+        } else {
+          target.style.backgroundColor = 'white';
+          target.style.color = 'black';
+          this.value = '어두운 배경';
+
+          var alist = document.querySelectorAll('a');
+          var i = 0;
+          while(i < alist.length){
+          alist[i].style.color = 'blue';
+          i = i + 1;
+          }
+        }"</p>
       <ul><li><h3>게임 목록</h3></li></ul>
     <p><img src="Wolf_NightImage.jpg" width="100%">
     <br></p>
 </body>
 </html>
-
