--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <title>Y3 MyGameList - html</title>
     <meta charset="utf-8">
 </head>
-<body style = "background-color:black; color:white">
+<body style = "background-color:white; color:black">
     <h1>나의 게임 개발 스토리!</h1>
     <ul><li><h3>게임 소개</h3></li></ul>
         <strong><a href = "https://github.com/ssinYoung/MyWEB/blob/main/BlueGreenDayWEB.html" title = "Open Script Dater">BlueGreenDay.RPG Script </a></strog>
         <br><strong><a href = "https://github.com/ssinYoung/MyWEB/blob/main/ChaosWarWEB.html" title = "Open Script Dater">ChaosWar.Def Script </a></strog>
-        <br><p><input type="button" value="밝은 배경" onclick=" var target = document.querySelector('body');
+        <br><p><input type="button" value="어두운 배경" onclick=" var target = document.querySelector('body');
         if (this.value == '어두운 배경'){
           target.style.backgroundColor = 'black';
           target.style.color = 'white';
