--- a/index.html
+++ b/index.html
@@ -4,30 +4,42 @@
     <title>Y3 MyGameList - JavaScript</title>
     <meta charset="utf-8">
     <script>
-    function screenHandler(self){
-      var target = document.querySelector('body');
-      if (self.value === '어두운 배경'){
-        target.style.backgroundColor = 'black';
-        target.style.color = 'white';
-        self.value = '밝은 배경';
+    var target = document.querySelector('body');
 
+    var Link = {
+      setLink:function (color){
         var alist = document.querySelectorAll('a');
         var i = 0;
         while(i < alist.length){
-        alist[i].style.color = 'powderblue';
+        alist[i].style.color = color;
         i = i + 1;
         }
+      }
+    }
+
+    var Body = {
+      setFontColor:function (color){
+        document.querySelector('body').style.color = color;
+      },
+      setBackgroundColor:function (color){
+        document.querySelector('body').style.backgroundColor = color;
+      }
+    }
+
+    function screenHandler(self){
+      if (self.value === '어두운 배경'){
+        Body.setBackgroundColor('black');
+        Body.setFontColor('white');
+        self.value = '밝은 배경';
+
+        Link.setLink('powderblue');
+
       } else {
-        target.style.backgroundColor = 'white';
-        target.style.color = 'black';
+        Body.setBackgroundColor('white');
+        Body.setFontColor('black');
         self.value = '어두운 배경';
 
-        var alist = document.querySelectorAll('a');
-        var i = 0;
-        while(i < alist.length){
-        alist[i].style.color = 'blue';
-        i = i + 1;
-      }
+        Link.setLink('blue');
     }
   }
     </script>
